--- a/src/python3_course_for_devs/notebooks/scope.ipynb
+++ b/src/python3_course_for_devs/notebooks/scope.ipynb
@@ -35,7 +35,7 @@
     "- 全局作用域\n",
     "- 局部作用域\n",
     "  - [函数]('./function.ipynb')\n",
-    "  - 类\n",
+    "  - [类]('./class.ipynb')\n",
     "  - with 语句\n"
    ]
   },
