--- a/src/python3_course_for_devs/notebooks/module.ipynb
+++ b/src/python3_course_for_devs/notebooks/module.ipynb
@@ -27,16 +27,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__all__', '__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', 'author', 'name']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'这是一个测试模块'"
+       "'python3_course_for_devs.main'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +51,9 @@
    "source": [
     "import python3_course_for_devs.main\n",
     "\n",
-    "python3_course_for_devs.main.c_name"
+    "print(dir(python3_course_for_devs.main))\n",
+    "\n",
+    "python3_course_for_devs.main.name"
    ]
   },
   {
@@ -58,16 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'这是一个测试模块'"
+       "'python3_course_for_devs.main'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +84,7 @@
    "source": [
     "import python3_course_for_devs.main as main\n",
     "\n",
-    "main.c_name"
+    "main.name"
    ]
   },
   {
@@ -89,24 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'这是一个测试模块'"
+       "'python3_course_for_devs.main'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from python3_course_for_devs.main import c_name\n",
+    "from python3_course_for_devs.main import name\n",
     "\n",
-    "c_name"
+    "name"
    ]
   },
   {
@@ -117,21 +126,23 @@
     "\n",
     "将模块中的所有函数、变量和类引入到当前命名空间中，可以直接在代码中使用它们，而无需使用模块名作为前缀。\n",
     "\n",
-    "这种方式可能会导致命名冲突，因此在实际使用中需要谨慎使用。\n"
+    "当模块定义了 `__all__` 变量时，使用 `from ... import *` 语句只会导入 `__all__` 列表中指定的变量、函数和类。\n",
+    "\n",
+    "注意：这种方式可能会导致命名冲突，应尽量避免使用。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'这是一个测试模块'"
+       "'binghuis'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +150,45 @@
    "source": [
     "from python3_course_for_devs.main import *\n",
     "\n",
-    "c_name"
+    "author"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 模块查找\n",
+    "\n",
+    "当导入一个模块时，解释器会按照一定的顺序搜索该模块的位置。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks',\n",
+       " '/Users/songbinghui/.pyenv/versions/3.10.6/lib/python310.zip',\n",
+       " '/Users/songbinghui/.pyenv/versions/3.10.6/lib/python3.10',\n",
+       " '/Users/songbinghui/.pyenv/versions/3.10.6/lib/python3.10/lib-dynload',\n",
+       " '',\n",
+       " '/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/.venv/lib/python3.10/site-packages',\n",
+       " '/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "# 搜索路径的列表\n",
+    "sys.path"
    ]
   },
   {
@@ -154,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'这是一个测试模块'"
+       "'python3_course_for_devs.main'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,51 +221,39 @@
     "import python3_course_for_devs\n",
     "\n",
     "\n",
-    "python3_course_for_devs.main.c_name"
+    "python3_course_for_devs.main.name"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `if __name__ == \"__main__\"`\n",
+    "### `__name__` & `\"__main__\"`\n",
     "\n",
-    "`__name__` 是 Python 中一个特殊的内置变量，用于表示当前模块的名称。\n",
+    "`__name__` 是一个内置变量，用于表示当前模块的名称。\n",
     "\n",
-    "`__main__` 是一个特殊的字符串，用于表示当前执行的模块的名称。当一个 Python 模块直接作为脚本被执行时，其`__name__`变量的值将被设置为`__main__`。\n",
+    "`__main__` 是一个特殊的字符串，用于表示当前执行的模块的名称。当一个模块直接作为脚本被执行时，其`__name__`变量的值将被设置为`__main__`。\n",
     "\n",
-    "这种用法通常与条件语句结合使用，例如：\n",
-    "\n",
-    "```python\n",
-    "if __name__ == \"__main__\":\n",
-    "    # 在这里编写只有在当前模块作为脚本执行时才会运行的代码\n",
-    "    # 例如，进行一些测试或执行一些特定的操作\n",
-    "    pass\n",
-    "```\n",
-    "\n",
-    "上述代码块中的代码只有在当前模块作为脚本直接执行时才会被执行。当该模块被导入为一个模块时，这部分代码不会执行。\n",
-    "\n",
-    "这种用法常用于将模块既作为脚本执行，又作为其他模块导入使用。通过将特定的代码逻辑包装在`if __name__ == \"__main__\":`条件语句中，可以确保这部分代码只在模块直接执行时运行，而在导入时不运行。\n"
+    "通过将特定的代码逻辑包装在`if __name__ == \"__main__\":`条件语句中，可以确保这部分代码只在模块直接执行时运行，而在导入时不运行。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'python3_course_for_devs'"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__main__\n"
+     ]
     }
    ],
    "source": [
-    "python3_course_for_devs.__name__"
+    "# main 模块作为脚本直接执行\n",
+    "\n",
+    "!python ../main.py"
    ]
   }
  ],
