--- a/src/python3_course_for_devs/notebooks/scope.ipynb
+++ b/src/python3_course_for_devs/notebooks/scope.ipynb
@@ -4,7 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 作用域\n",
+    "# 作用域 & 命名空间\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 命名空间\n",
+    "\n",
+    "命名空间可以被看作是一个字典或类似字典的对象，用于存储变量名和对应对象之间的映射关系。当你在一个作用域中定义一个变量时，这个变量就会被存储在该作用域对应的命名空间中。\n",
+    "\n",
+    "不同作用域的命名空间是相互独立的，它们之间不会相互干扰。这意味着在一个作用域内定义的变量不会影响到其他作用域中同名的变量。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 生命周期\n",
+    "\n",
+    "命名空间的生命周期可以与其所属的作用域相关联。命名空间是在创建对应作用域时动态生成的，并在作用域的生命周期内存在。命名空间的生命周期取决于其所属的作用域的创建和销毁过程。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作用域\n",
     "\n",
     "在 Python 中，变量的作用域是指变量在程序中可见和可访问的范围。Python 有以下几种作用域：\n",
     "\n",
@@ -13,7 +40,7 @@
     "- Global（全局作用域）\n",
     "- Built-in（内置作用域）\n",
     "\n",
-    "当引用一个变量时，解释器会按照以下顺序在不同的作用域中查找变量：局部作用域 -> 嵌套作用域 -> 全局作用域 -> 内置作用域。这就是所谓的 `LEGB` 规则。\n"
+    "当引用一个变量时，解释器会按照以下顺序在不同的作用域的命名空间中查找变量：局部作用域 -> 嵌套作用域 -> 全局作用域 -> 内置作用域。这就是所谓的 `LEGB` 规则。\n"
    ]
   },
   {
@@ -22,7 +49,7 @@
    "source": [
     "### 全局作用域\n",
     "\n",
-    "全局作用域（Global Scope）是在模块级别定义的变量的作用域。这意味着在模块中定义的变量可以在整个模块中的任何地方访问。全局变量在模块加载时被创建，并在整个程序的执行过程中一直存在。\n"
+    "全局作用域（Global Scope）是在模块级别定义的变量的作用域。这意味着在模块中定义的变量可以在整个模块中的任何地方访问。全局变量在模块加载时被创建，并在整个程序的执行过程中一直存在，直到程序结束或模块被卸载。\n"
    ]
   },
   {
@@ -40,7 +67,7 @@
    "source": [
     "### 局部作用域\n",
     "\n",
-    "局部作用域（Local Scope）是指在函数内部定义的变量的作用域。这些变量只能在函数内部访问，对于函数外部是不可见的。局部作用域的变量在函数执行期间创建，并在函数执行完毕后被销毁。每次函数调用都会创建一个新的局部作用域。局部作用域可以防止变量名冲突，提供了封装和保护变量的机制。\n"
+    "局部作用域（Local Scope）是指在函数内部定义的变量的作用域。这些变量只能在函数内部访问，对于函数外部是不可见的。局部作用域可以防止变量名冲突，提供了封装和保护变量的机制。局部作用域的变量在函数执行期间创建，并在函数执行完毕后被销毁。每次函数调用都会创建一个新的局部作用域。\n"
    ]
   },
   {
@@ -54,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +247,7 @@
        " 'zip']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
